--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
+    "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   },
   "jest": {
