--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "paths": {
             "@src/*": ["src/*/index", "src/*"]
         },
+        "suppressImplicitAnyIndexErrors": true,
     },
     "exclude": [
         "node_modules",
